2005-03-01  Lluis Sanchez Gual  <lluis@ximian.com>

	* BinaryCommon.cs: Found the meaning of two unknown binary elements.
	* CodeGenerator.cs: Derive generated classes from ClrTypeMetadata
	instead of TypeMetadata. Added writeTypes parameter to WriteTypeData().
	* ObjectWriter.cs: Use type and assembly names as keys for the type and
	assembly caches. This is needed since ISerializable types can provide
	fake type names (which are mapped to real types by a binder on
	deserialization).
	Implemented support for BinaryFormatter.TypeFormat.
	* BinaryFormatter.cs, MessageFormatter.cs: Implemented support for
	TypeFormat property.
	* ObjectReader.cs: Added support for objects serialized without
	member type information. This fixes bug #73114.
	If a binder return null, use the default way of loading the type.

2005-02-25  Lluis Sanchez Gual  <lluis@ximian.com>

	* ObjectReader.cs: In ReadArrayOfPrimitiveType, added a specific
	read loop for each type. It's much faster and avoids value boxings.

2005-01-10  Lluis Sanchez Gual  <lluis@ximian.com>

	* BinaryCommon.cs: IntPtr is not a primitive type in the serialization
	world. This fixes bug #70757.

2004-12-15  Lluis Sanchez Gual  <lluis@ximian.com>

	* ObjectReader.cs: Use GetField instead of GetMembers. Properties can't
	be serialized, so it makes no sense to use GetMembers.

2004-12-08  Zoltan Varga  <vargaz@freemail.hu>

	* CodeGenerator.cs: Call new DefineInternalDynamicAssembly method to prevent a race
	condition in the setting of the CorlibInternal flag.

2004-12-06  Zoltan Varga  <vargaz@freemail.hu>

	* CodeGenerator.cs: Mark the created assembly builder as internal.

2004-11-29  Lluis Sanchez Gual  <lluis@ximian.com>

	* CodeGenerator.cs: Addded EnumToUnderlying method to get the underlying
	type of an enum. This fixes bug #69753.

2004-07-02  Lluis Sanchez Gual  <lluis@ximian.com>

	* BinaryCommon.cs: Added CheckSerializable method.
	* ObjectWriter.cs: Check for type serializability even for members with